--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <div class="row time-block">
+        <div class="col-md-1">9AM</div>
+        <textarea class="col-md-10 future"></textarea>
+        <button class="saveBtn col-md-1">
+          <i class="far fa-save"></i>
+        </button>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
