--- a/index.html
+++ b/index.html
@@ -30,7 +30,70 @@
     </header>
     <div class="container">
       <div class="row time-block">
-        <div class="col-md-1">9AM</div>
+        <div class="col-md-1 hour">9AM</div>
+        <textarea class="col-md-10 future"></textarea>
+        <button class="saveBtn col-md-1">
+          <i class="far fa-save"></i>
+        </button>
+      </div>
+      <div class="row time-block">
+        <div class="col-md-1 hour">10AM</div>
+        <textarea class="col-md-10 future"></textarea>
+        <button class="saveBtn col-md-1">
+          <i class="far fa-save"></i>
+        </button>
+      </div>
+      <div class="row time-block">
+        <div class="col-md-1 hour">11AM</div>
+        <textarea class="col-md-10 future"></textarea>
+        <button class="saveBtn col-md-1">
+          <i class="far fa-save"></i>
+        </button>
+      </div>
+      <div class="row time-block">
+        <div class="col-md-1 hour">12PM</div>
+        <textarea class="col-md-10 future"></textarea>
+        <button class="saveBtn col-md-1">
+          <i class="far fa-save"></i>
+        </button>
+      </div>
+      <div class="row time-block">
+        <div class="col-md-1 hour">1PM</div>
+        <textarea class="col-md-10 future"></textarea>
+        <button class="saveBtn col-md-1">
+          <i class="far fa-save"></i>
+        </button>
+      </div>
+      <div class="row time-block">
+        <div class="col-md-1 hour">2PM</div>
+        <textarea class="col-md-10 future"></textarea>
+        <button class="saveBtn col-md-1">
+          <i class="far fa-save"></i>
+        </button>
+      </div>
+      <div class="row time-block">
+        <div class="col-md-1 hour">3PM</div>
+        <textarea class="col-md-10 future"></textarea>
+        <button class="saveBtn col-md-1">
+          <i class="far fa-save"></i>
+        </button>
+      </div>
+      <div class="row time-block">
+        <div class="col-md-1 hour">4PM</div>
+        <textarea class="col-md-10 future"></textarea>
+        <button class="saveBtn col-md-1">
+          <i class="far fa-save"></i>
+        </button>
+      </div>
+      <div class="row time-block">
+        <div class="col-md-1 hour">5PM</div>
+        <textarea class="col-md-10 future"></textarea>
+        <button class="saveBtn col-md-1">
+          <i class="far fa-save"></i>
+        </button>
+      </div>
+      <div class="row time-block">
+        <div class="col-md-1 hour">9AM</div>
         <textarea class="col-md-10 future"></textarea>
         <button class="saveBtn col-md-1">
           <i class="far fa-save"></i>
