--- a/index.html
+++ b/index.html
@@ -31,70 +31,63 @@
     <div class="container">
       <div class="row time-block">
         <div class="col-md-1 hour">9AM</div>
-        <textarea class="col-md-10 future"></textarea>
+        <textarea class="col-md-10 future" data-hour="9"></textarea>
         <button class="saveBtn col-md-1">
           <i class="far fa-save"></i>
         </button>
       </div>
       <div class="row time-block">
         <div class="col-md-1 hour">10AM</div>
-        <textarea class="col-md-10 future"></textarea>
+        <textarea class="col-md-10 future" data-hour="10"></textarea>
         <button class="saveBtn col-md-1">
           <i class="far fa-save"></i>
         </button>
       </div>
       <div class="row time-block">
         <div class="col-md-1 hour">11AM</div>
-        <textarea class="col-md-10 future"></textarea>
+        <textarea class="col-md-10 future" data-hour="11"></textarea>
         <button class="saveBtn col-md-1">
           <i class="far fa-save"></i>
         </button>
       </div>
       <div class="row time-block">
         <div class="col-md-1 hour">12PM</div>
-        <textarea class="col-md-10 future"></textarea>
+        <textarea class="col-md-10 future" data-hour="12"></textarea>
         <button class="saveBtn col-md-1">
           <i class="far fa-save"></i>
         </button>
       </div>
       <div class="row time-block">
         <div class="col-md-1 hour">1PM</div>
-        <textarea class="col-md-10 future"></textarea>
+        <textarea class="col-md-10 future" data-hour="13"></textarea>
         <button class="saveBtn col-md-1">
           <i class="far fa-save"></i>
         </button>
       </div>
       <div class="row time-block">
         <div class="col-md-1 hour">2PM</div>
-        <textarea class="col-md-10 future"></textarea>
+        <textarea class="col-md-10 future" data-hour="14"></textarea>
         <button class="saveBtn col-md-1">
           <i class="far fa-save"></i>
         </button>
       </div>
       <div class="row time-block">
         <div class="col-md-1 hour">3PM</div>
-        <textarea class="col-md-10 future"></textarea>
+        <textarea class="col-md-10 future" data-hour="16"></textarea>
         <button class="saveBtn col-md-1">
           <i class="far fa-save"></i>
         </button>
       </div>
       <div class="row time-block">
         <div class="col-md-1 hour">4PM</div>
-        <textarea class="col-md-10 future"></textarea>
+        <textarea class="col-md-10 future" data-hour="17"></textarea>
         <button class="saveBtn col-md-1">
           <i class="far fa-save"></i>
         </button>
       </div>
       <div class="row time-block">
         <div class="col-md-1 hour">5PM</div>
-        <textarea class="col-md-10 future"></textarea>
-        <button class="saveBtn col-md-1">
-          <i class="far fa-save"></i>
-        </button>
-      </div>
-      <div class="row time-block">
-        <div class="col-md-1 hour">9AM</div>
-        <textarea class="col-md-10 future"></textarea>
+        <textarea class="col-md-10 future" data-hour="18"></textarea>
         <button class="saveBtn col-md-1">
           <i class="far fa-save"></i>
         </button>
